--- a/src/main/resources/com/networkchat/fxml/login-form.fxml
+++ b/src/main/resources/com/networkchat/fxml/login-form.fxml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane fx:id="bckgLogin" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseDragged="#onFormDragEntered" onMousePressed="#onMousePressed" prefHeight="387.0" prefWidth="727.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.networkchat.fxml.LoginController">
+<AnchorPane fx:id="bckgLogin" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseDragged="#onFormDragEntered" onMousePressed="#onMousePressed" prefHeight="387.0" prefWidth="727.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.networkchat.login.LoginController">
    <children>
       <Label fx:id="lWelcome" layoutX="292.0" layoutY="63.0" prefHeight="48.0" prefWidth="397.0" text="Welcome to ChatMall!" textFill="WHITE" />
       <ImageView fx:id="btnClose" fitHeight="25.0" fitWidth="25.0" layoutX="688.0" layoutY="14.0" onMouseClicked="#onBtnCloseClicked" pickOnBounds="true" preserveRatio="true">
