--- a/src/main/resources/com/networkchat/fxml/registration-form.fxml
+++ b/src/main/resources/com/networkchat/fxml/registration-form.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="bckgLogin" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseDragged="#onFormDragEntered" onMousePressed="#onMousePressed" prefHeight="387.0" prefWidth="727.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.networkchat.fxml.RegistrationController">
+<AnchorPane fx:id="bckgLogin" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseDragged="#onFormDragEntered" onMousePressed="#onMousePressed" prefHeight="387.0" prefWidth="727.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.networkchat.registration.RegistrationController">
    <children>
       <Label fx:id="lWelcome" layoutX="292.0" layoutY="63.0" prefHeight="48.0" prefWidth="397.0" text="Start chatting today!" textFill="WHITE" />
       <ImageView fx:id="btnClose" fitHeight="25.0" fitWidth="25.0" layoutX="688.0" layoutY="14.0" onMouseClicked="#onBtnCloseClicked" pickOnBounds="true" preserveRatio="true">
