--- a/src/main/resources/com/networkchat/fxml/chatroom-form.fxml
+++ b/src/main/resources/com/networkchat/fxml/chatroom-form.fxml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-
-<AnchorPane prefHeight="914.0" prefWidth="1235.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.networkchat.ChatroomController">
+<AnchorPane prefHeight="914.0" prefWidth="1235.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.networkchat.chat.ChatroomController">
    <children>
-      <Pane fx:id="pLeftMenu" layoutY="37.0" prefHeight="877.0" prefWidth="303.0" />
-      <Pane fx:id="pChat" layoutX="303.0" layoutY="37.0" prefHeight="877.0" prefWidth="675.0" />
-      <Pane fx:id="pRightMenu" layoutX="978.0" layoutY="37.0" prefHeight="877.0" prefWidth="257.0" />
-      <Pane fx:id="bckgHeader" prefHeight="42.0" prefWidth="1235.0">
+      <Pane fx:id="bckgHeader" prefHeight="42.0" prefWidth="1236.0">
          <children>
             <ImageView fx:id="btnClose" fitHeight="25.0" fitWidth="25.0" layoutX="1196.0" layoutY="8.0" onMouseClicked="#onBtnCloseClicked" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -25,5 +30,51 @@
             </ImageView>
          </children>
       </Pane>
+      <ScrollPane fx:id="spMessages" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" layoutX="303.0" layoutY="42.0" pannable="true" prefHeight="872.0" prefWidth="675.0">
+         <content>
+            <GridPane fx:id="gpMessages" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="827.0" prefWidth="673.0" vgap="10.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="25.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="50.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="25.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+            </GridPane>
+         </content>
+      </ScrollPane>
+      <Pane fx:id="pAccount" layoutY="42.0" prefHeight="872.0" prefWidth="303.0">
+         <children>
+            <TextField fx:id="eNewUsername" layoutX="14.0" layoutY="105.0" prefHeight="35.0" prefWidth="277.0" promptText="Enter new username, if you want" />
+            <Button fx:id="btnChangeUsername" layoutX="41.0" layoutY="149.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="224.0" text="Change username" />
+            <Label fx:id="lChatWelcome" layoutX="14.0" layoutY="19.0" prefHeight="30.0" prefWidth="131.0" text="Welcome, " />
+            <Label fx:id="lUsername" layoutX="14.0" layoutY="49.0" prefHeight="30.0" prefWidth="258.0" underline="true" />
+         </children></Pane>
+      <ScrollPane fx:id="spUsers" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" layoutX="978.0" layoutY="42.0" pannable="true" prefHeight="872.0" prefWidth="258.0">
+         <content>
+            <GridPane fx:id="gpUsers" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="897.0" prefWidth="256.0" vgap="10.0">
+               <columnConstraints>
+                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" percentWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" percentWidth="80.0" prefWidth="100.0" />
+                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" percentWidth="10.0" prefWidth="100.0" />
+               </columnConstraints>
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" />
+               </rowConstraints>
+            </GridPane>
+         </content>
+      </ScrollPane>
+      <TextArea fx:id="eMessage" layoutX="304.0" layoutY="871.0" prefHeight="42.0" prefWidth="564.0" promptText="Write your message here..." />
+      <Button fx:id="btnSend" layoutX="869.0" layoutY="871.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="108.0" text="Send" />
+      <Label fx:id="lUsers" layoutX="999.0" layoutY="54.0" prefHeight="35.0" prefWidth="218.0" text="NOW IN THE CHAT" />
    </children>
 </AnchorPane>
