--- a/src/main/resources/com/networkchat/styles/login.css
+++ b/src/main/resources/com/networkchat/styles/login.css
@@ -29,12 +29,12 @@
     -fx-background: linear-gradient(to right, #00D4FF 0%, #090979 52%, #020024 100%);
 }
 
-#btnClose:hover, #btnMinimize:hover {
+#btnClose:hover, #btnMinimize:hover, #btnChangeUsername {
     -fx-cursor: hand;
     -fx-effect: dropshadow(three-pass-box, #FFFFFF, 5, 0, 0, 0);
 }
 
-#eUsername, #ePassword, #eEmail, #eConfirmationCode {
+#eUsername, #ePassword, #eEmail, #eConfirmationCode, #eNewUsername {
     -fx-font-family: Roboto;
     -fx-font-size: 15px;
     -fx-background-color: white;
@@ -43,7 +43,7 @@
     -fx-prompt-text-fill: #090979;
 }
 
-#eUsername:focused, #ePassword:focused, #eEmail:focused, #eConfirmationCode:focused {
+#eUsername:focused, #ePassword:focused, #eEmail:focused, #eConfirmationCode:focused, #eNewUsername:focused {
     -fx-effect: innershadow(three-pass-box, #000000, 4, 0, 0, 0);
 }
 
@@ -56,7 +56,7 @@
     -fx-font-weight: bold;
 }
 
-#btnLogin:hover, #btnSignUp:hover, #btnConfirm:hover {
+#btnLogin:hover, #btnSignUp:hover, #btnConfirm:hover, #btnChangeUsername:hover {
     -fx-effect: innershadow(three-pass-box, #000000, 4, 0, 0, 0);
     -fx-cursor: hand;
 }
