feat: almost finished

--- a/src/main/resources/com/networkchat/fxml/chatroom-form.fxml
+++ b/src/main/resources/com/networkchat/fxml/chatroom-form.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -14,25 +13,25 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="914.0" prefWidth="1235.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.networkchat.chat.ChatroomController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="914.0" prefWidth="912.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.networkchat.chat.ChatroomController">
    <children>
-      <Pane fx:id="bckgHeader" onMouseDragged="#onFormDragEntered" onMousePressed="#onMousePressed" prefHeight="42.0" prefWidth="1236.0">
+      <Pane fx:id="bckgHeader" onMouseDragged="#onFormDragEntered" onMousePressed="#onMousePressed" prefHeight="42.0" prefWidth="933.0">
          <children>
-            <ImageView fx:id="btnClose" fitHeight="25.0" fitWidth="25.0" layoutX="1196.0" layoutY="8.0" onMouseClicked="#onBtnCloseClicked" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="btnClose" fitHeight="25.0" fitWidth="25.0" layoutX="898.0" layoutY="9.0" onMouseClicked="#onBtnCloseClicked" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../icons/close-icon.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="btnMinimize" fitHeight="25.0" fitWidth="25.0" layoutX="1162.0" layoutY="8.0" onMouseClicked="#onBtnMinimizeClicked" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="btnMinimize" fitHeight="25.0" fitWidth="25.0" layoutX="864.0" layoutY="9.0" onMouseClicked="#onBtnMinimizeClicked" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../icons/minimize.png" />
                </image>
             </ImageView>
          </children>
       </Pane>
-      <ScrollPane fx:id="spMessages" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" layoutX="303.0" layoutY="42.0" pannable="true" prefHeight="872.0" prefWidth="675.0">
+      <ScrollPane fx:id="spMessages" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" layoutY="42.0" maxHeight="-Infinity" pannable="true" prefHeight="820.0" prefWidth="684.0" vvalue="1.0">
          <content>
-            <GridPane fx:id="gpMessages" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="827.0" prefWidth="673.0" vgap="10.0">
+            <GridPane fx:id="gpMessages" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="849.0" prefWidth="682.0" vgap="10.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="25.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="50.0" prefWidth="100.0" />
@@ -49,16 +48,9 @@
             </GridPane>
          </content>
       </ScrollPane>
-      <Pane fx:id="pAccount" layoutY="42.0" prefHeight="872.0" prefWidth="303.0">
-         <children>
-            <TextField fx:id="eNewUsername" layoutX="14.0" layoutY="105.0" prefHeight="35.0" prefWidth="277.0" promptText="Enter new username, if you want" />
-            <Button fx:id="btnChangeUsername" layoutX="41.0" layoutY="149.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="224.0" text="Change username" />
-            <Label fx:id="lChatWelcome" layoutX="14.0" layoutY="19.0" prefHeight="30.0" prefWidth="131.0" text="Welcome, " />
-            <Label fx:id="lUsername" layoutX="14.0" layoutY="49.0" prefHeight="30.0" prefWidth="258.0" underline="true" />
-         </children></Pane>
-      <ScrollPane fx:id="spUsers" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" layoutX="978.0" layoutY="42.0" pannable="true" prefHeight="872.0" prefWidth="258.0">
+      <ScrollPane fx:id="spUsers" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" layoutX="684.0" layoutY="42.0" pannable="true" prefHeight="872.0" prefWidth="250.0">
          <content>
-            <GridPane fx:id="gpUsers" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="897.0" prefWidth="256.0" vgap="10.0">
+            <GridPane fx:id="gpUsers" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="870.0" prefWidth="248.0" vgap="10.0">
                <columnConstraints>
                   <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" percentWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" percentWidth="80.0" prefWidth="100.0" />
@@ -73,8 +65,8 @@
             </GridPane>
          </content>
       </ScrollPane>
-      <TextArea fx:id="eMessage" layoutX="304.0" layoutY="871.0" prefHeight="42.0" prefWidth="564.0" promptText="Write your message here..." />
-      <Button fx:id="btnSend" layoutX="869.0" layoutY="871.0" mnemonicParsing="false" onMouseClicked="#onBtnSendClicked" prefHeight="42.0" prefWidth="108.0" text="Send" />
-      <Label fx:id="lUsers" layoutX="999.0" layoutY="54.0" prefHeight="35.0" prefWidth="218.0" text="NOW IN THE CHAT" />
+      <TextArea fx:id="eMessage" layoutX="1.0" layoutY="863.0" onKeyPressed="#onEnterKeyPressed" prefHeight="49.0" prefWidth="572.0" promptText="Write your message here..." />
+      <Button fx:id="btnSend" layoutX="574.0" layoutY="863.0" mnemonicParsing="false" onMouseClicked="#onBtnSendClicked" prefHeight="49.0" prefWidth="108.0" text="Send" />
+      <Label fx:id="lUsers" layoutX="706.0" layoutY="50.0" prefHeight="35.0" prefWidth="218.0" text="NOW IN THE CHAT" />
    </children>
 </AnchorPane>
